--- a/index.html
+++ b/index.html
@@ -2,187 +2,166 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Carta para ti</title>
+<title>Esta noche, para ti</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;1,500&family=Great+Vibes&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;1,500&family=Allura&display=swap" rel="stylesheet">
 
 <style>
-    body {
-        margin: 0;
-        min-height: 100vh;
-        background: radial-gradient(circle at top, #2b0a3d, #120018);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: 'Playfair Display', serif;
-        color: #f3e8ff;
-        padding: 30px;
-    }
+body{
+    margin:0;
+    background:#0b0014;
+    color:#f4eaff;
+    font-family:'Cormorant Garamond', serif;
+}
 
-    .carta {
-        max-width: 900px;
-        background: linear-gradient(180deg, rgba(80,20,120,0.25), rgba(30,0,50,0.35));
-        border-radius: 30px;
-        padding: 60px;
-        box-shadow: 0 0 40px rgba(180,100,255,0.25);
-        position: relative;
-        overflow: hidden;
-    }
+.contenedor{
+    max-width:900px;
+    margin:0 auto;
+    padding:80px 30px;
+}
 
-    .carta::before {
-        content: "";
-        position: absolute;
-        inset: 0;
-        background: url('https://www.transparenttextures.com/patterns/stardust.png');
-        opacity: 0.15;
-        pointer-events: none;
-    }
+.encabezado{
+    font-family:'Allura', cursive;
+    font-size:68px;
+    text-align:left;
+    color:#cfa4ff;
+    margin-bottom:60px;
+}
 
-    h1 {
-        font-family: 'Great Vibes', cursive;
-        text-align: center;
-        font-size: 64px;
-        color: #e0b3ff;
-        margin-bottom: 40px;
-        text-shadow: 0 0 15px rgba(200,120,255,0.6);
-    }
+.carta{
+    border-left:4px solid #7d3fc7;
+    padding-left:40px;
+}
 
-    p {
-        font-size: 20px;
-        line-height: 1.9;
-        margin-bottom: 25px;
-        text-align: justify;
-    }
+.carta p{
+    font-size:22px;
+    line-height:2;
+    margin-bottom:28px;
+    text-align:justify;
+}
 
-    .firma {
-        margin-top: 50px;
-        text-align: right;
-        font-size: 22px;
-        color: #d6a8ff;
-    }
+.firma{
+    margin-top:70px;
+    font-size:24px;
+    color:#d8b6ff;
+}
 
-    .botones {
-        margin-top: 50px;
-        text-align: center;
-    }
+.botones{
+    margin-top:80px;
+    text-align:center;
+}
 
-    button {
-        background: linear-gradient(135deg, #7a1fbf, #c77dff);
-        border: none;
-        border-radius: 50px;
-        padding: 15px 35px;
-        font-size: 18px;
-        color: white;
-        cursor: pointer;
-        margin: 10px;
-        box-shadow: 0 0 20px rgba(200,120,255,0.5);
-        transition: transform 0.3s, box-shadow 0.3s;
-    }
+.botones button{
+    background:transparent;
+    border:2px solid #a46cff;
+    color:#f4eaff;
+    padding:14px 32px;
+    margin:10px;
+    font-size:18px;
+    border-radius:40px;
+    cursor:pointer;
+    transition:all 0.3s ease;
+}
 
-    button:hover {
-        transform: scale(1.05);
-        box-shadow: 0 0 30px rgba(220,150,255,0.8);
-    }
-
-    iframe {
-        display: none;
-    }
+.botones button:hover{
+    background:#a46cff;
+    color:#12001f;
+}
 </style>
 </head>
 
 <body>
 
-<div class="carta">
-    <h1>Para ti, esta noche</h1>
+<div class="contenedor">
 
-    <p>
-        Esta noche no es una noche cualquiera. Es una de esas noches en las que el corazón
-        se siente más despierto que nunca, en las que el silencio pronuncia tu nombre
-        sin cansarse, una y otra vez.
-    </p>
-
-    <p>
-        Mientras el mundo sigue su curso, aquí dentro todo se detiene porque te pienso,
-        porque te extraño, porque mi amor por ti no sabe quedarse quieto.
-        La distancia intenta imponerse, pero no puede tocar lo que sentimos,
-        porque lo nuestro vive más profundo.
-    </p>
-
-    <p>
-        Extraño tus abrazos… esos que hacen que todo tenga sentido.
-        Extraño tus besos, no solo por el contacto, sino por lo que provocan,
-        por la forma en que hacen que el tiempo se rinda.
-        Te extraño de una manera intensa, honesta, inevitable.
-    </p>
-
-    <p>
-        Amarte así me ha enseñado que el amor verdadero no depende de la cercanía,
-        sino de la conexión. Te llevo conmigo incluso cuando no estás,
-        incluso cuando cierro los ojos y solo me queda imaginarte.
-    </p>
-
-    <p>
-        Esta noche quiero que sientas mi presencia,
-        que cada palabra sea un abrazo lento,
-        que cada línea sea un beso guardado.
-        Todo este amor es tuyo,
-        hoy, mañana y siempre.
-    </p>
-
-    <div class="firma">
-        Con todo mi amor,<br>
-        Juan
+    <div class="encabezado">
+        Sábado 10 de enero de 2026, por la noche
     </div>
 
-    <div class="botones">
-        <button onclick="iniciarMusica()">Iniciar música</button>
-        <button onclick="pausarMusica()">Pausar</button>
-        <button onclick="continuarMusica()">Continuar</button>
-    </div>
+    <div class="carta">
+
+<p>Amor mío,</p>
+
+<p>
+Esta noche no es una noche cualquiera. Es una de esas noches en las que el corazón se siente más despierto que nunca, en las que el silencio habla y dice tu nombre una y otra vez. Afuera el mundo sigue, el tiempo avanza, pero aquí dentro todo se detiene porque te pienso, porque te extraño, porque mi amor por ti no sabe quedarse callado.
+</p>
+
+<p>
+Mientras esta canción suena, siento que cada verso entiende exactamente lo que llevo dentro. La distancia… esa palabra que no debería existir cuando dos almas se aman así. Esa distancia que intenta separarnos, pero que no puede tocar lo que sentimos, porque lo nuestro vive más profundo, más adentro, donde nada ni nadie puede alcanzarlo.
+</p>
+
+<p>
+Te extraño de una forma que no sabía que era posible. No es solo extrañar tu presencia, es extrañar tu calor, tu olor, la manera en que tu cuerpo encaja con el mío como si hubiera sido creado para hacerlo. Extraño abrazarte y sentir cómo todo se acomoda, cómo mis preocupaciones se apagan cuando estás entre mis brazos. Extraño la paz que me das sin darte cuenta.
+</p>
+
+<p>
+Extraño besarte… y no de cualquier manera. Extraño esos besos que empiezan suaves y terminan siendo promesas. Esos besos que no necesitan palabras, porque lo dicen todo. Extraño besarte lento, besarte con ganas, besarte como si el mundo no existiera. Extraño perderme en tus labios y recordar que ahí es donde pertenezco.
+</p>
+
+<p>
+Hay noches como esta en las que cierro los ojos y te imagino conmigo. Te imagino sentada frente a mí, mirándome como solo tú sabes hacerlo, con esa mezcla perfecta de ternura y profundidad. Te imagino sonriendo, acercándote poco a poco, dejando que el silencio haga su parte antes del beso. Y aunque sé que es solo mi imaginación, mi corazón reacciona como si fuera real, porque el amor no entiende de distancias.
+</p>
+
+<p>
+Pensarte se ha vuelto un hábito, pero no uno cualquiera, sino uno sagrado. Te pienso cuando despierto y cuando me acuesto. Te pienso en los momentos felices y también cuando el cansancio pesa. Te pienso incluso cuando no quiero pensar en nada, porque apareces sola, sin ser llamada, como si mi mente supiera que tú eres hogar.
+</p>
+
+<p>
+Este amor que siento por ti no es pasajero, no es ligero, no es superficial. Es un amor que se queda, que resiste, que espera. Un amor que no se desespera por la distancia, sino que la enfrenta con paciencia y esperanza. Porque sé que todo esto vale la pena, porque sé que tú vales cada segundo de espera.
+</p>
+
+<p>
+Si supieras cuánto deseo abrazarte ahora mismo… No un abrazo rápido, no uno de cortesía. Hablo de ese abrazo largo, profundo, en el que el tiempo se rinde. Ese abrazo donde mi pecho encuentra el tuyo y el mundo deja de importar. Ese abrazo donde no hace falta decir “te extrañé”, porque el cuerpo lo grita solo.
+</p>
+
+<p>
+Esta noche, mientras suena esta canción, quiero que sepas que mi amor viaja hacia ti. Que cruza cualquier distancia, cualquier obstáculo, cualquier silencio. Que llega a ti como un susurro, como una caricia invisible, como un abrazo que no se ve pero se siente.
+</p>
+
+<div class="firma">
+Con todo mi amor,<br>
+Juan
 </div>
 
-<!-- YouTube Player oculto -->
+</div>
+
+<div class="botones">
+    <button onclick="playMusic()">Iniciar música</button>
+    <button onclick="pauseMusic()">Pausar</button>
+    <button onclick="playMusic()">Continuar</button>
+</div>
+
+</div>
+
 <div id="player"></div>
 
 <script>
-    let player;
+let player;
 
-    function onYouTubeIframeAPIReady() {
-        player = new YT.Player('player', {
-            height: '0',
-            width: '0',
-            videoId: 'bk3S6vaMi6g',
-            playerVars: {
-                'autoplay': 0,
-                'controls': 0,
-                'rel': 0
-            }
-        });
-    }
-
-    function iniciarMusica() {
-        if (player) {
-            player.playVideo();
+function onYouTubeIframeAPIReady() {
+    player = new YT.Player('player', {
+        height: '0',
+        width: '0',
+        videoId: 'bk3S6vaMi6g',
+        playerVars: {
+            autoplay: 0,
+            controls: 0
         }
-    }
+    });
+}
 
-    function pausarMusica() {
-        if (player) {
-            player.pauseVideo();
-        }
-    }
+function playMusic(){
+    if(player) player.playVideo();
+}
 
-    function continuarMusica() {
-        if (player) {
-            player.playVideo();
-        }
-    }
+function pauseMusic(){
+    if(player) player.pauseVideo();
+}
 
-    // Cargar API de YouTube
-    let tag = document.createElement('script');
-    tag.src = "https://www.youtube.com/iframe_api";
-    document.body.appendChild(tag);
+var tag = document.createElement('script');
+tag.src = "https://www.youtube.com/iframe_api";
+document.body.appendChild(tag);
 </script>
 
 </body>
-</html>
+    </html>
