--- a/index.html
+++ b/index.html
@@ -4,81 +4,80 @@
 <meta charset="UTF-8">
 <title>Esta noche, para ti</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;1,500&family=Allura&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;1,400&family=Italiana&display=swap" rel="stylesheet">
 
 <style>
 body{
     margin:0;
-    background:#0b0014;
-    color:#f4eaff;
-    font-family:'Cormorant Garamond', serif;
+    background:linear-gradient(180deg,#0a0014,#140021);
+    color:#f6ecff;
+    font-family:'Libre Baskerville', serif;
 }
 
-.contenedor{
+.wrapper{
     max-width:900px;
-    margin:0 auto;
-    padding:80px 30px;
+    margin:auto;
+    padding:90px 35px;
 }
 
-.encabezado{
-    font-family:'Allura', cursive;
-    font-size:68px;
-    text-align:left;
-    color:#cfa4ff;
-    margin-bottom:60px;
+.fecha{
+    font-family:'Italiana', serif;
+    font-size:52px;
+    color:#cda6ff;
+    margin-bottom:70px;
 }
 
 .carta{
-    border-left:4px solid #7d3fc7;
-    padding-left:40px;
+    border-left:3px solid #8f5bd9;
+    padding-left:45px;
 }
 
 .carta p{
-    font-size:22px;
-    line-height:2;
-    margin-bottom:28px;
+    font-size:21px;
+    line-height:2.15;
+    margin-bottom:34px;
     text-align:justify;
 }
 
 .firma{
-    margin-top:70px;
-    font-size:24px;
-    color:#d8b6ff;
+    margin-top:120px;
+    font-size:22px;
+    color:#e2caff;
 }
 
 .botones{
-    margin-top:80px;
+    margin-top:120px;
     text-align:center;
 }
 
 .botones button{
-    background:transparent;
-    border:2px solid #a46cff;
-    color:#f4eaff;
-    padding:14px 32px;
+    background:none;
+    border:2px solid #b88cff;
+    color:#f6ecff;
+    padding:14px 36px;
+    font-size:17px;
+    border-radius:50px;
     margin:10px;
-    font-size:18px;
-    border-radius:40px;
     cursor:pointer;
-    transition:all 0.3s ease;
+    transition:all .35s ease;
 }
 
 .botones button:hover{
-    background:#a46cff;
-    color:#12001f;
+    background:#b88cff;
+    color:#160022;
 }
 </style>
 </head>
 
 <body>
 
-<div class="contenedor">
+<div class="wrapper">
 
-    <div class="encabezado">
-        Sábado 10 de enero de 2026, por la noche
-    </div>
+<div class="fecha">
+Sábado 10 de enero de 2026, por la noche
+</div>
 
-    <div class="carta">
+<div class="carta">
 
 <p>Amor mío,</p>
 
@@ -99,7 +98,11 @@ Extraño besarte… y no de cualquier manera. Extraño esos besos que empiezan s
 </p>
 
 <p>
-Hay noches como esta en las que cierro los ojos y te imagino conmigo. Te imagino sentada frente a mí, mirándome como solo tú sabes hacerlo, con esa mezcla perfecta de ternura y profundidad. Te imagino sonriendo, acercándote poco a poco, dejando que el silencio haga su parte antes del beso. Y aunque sé que es solo mi imaginación, mi corazón reacciona como si fuera real, porque el amor no entiende de distancias.
+Hay noches como esta en las que cierro los ojos y te imagino conmigo. Te imagino frente a mí, mirándome como solo tú sabes hacerlo, con esa mezcla perfecta de ternura y profundidad. Te imagino acercándote despacio, dejando que el silencio haga su parte antes del beso.
+</p>
+
+<p>
+Y aunque sé que es solo mi imaginación, mi corazón reacciona como si fuera real. Porque el amor no entiende de distancias, entiende de certezas. Y tú eres mi certeza.
 </p>
 
 <p>
@@ -107,28 +110,76 @@ Pensarte se ha vuelto un hábito, pero no uno cualquiera, sino uno sagrado. Te p
 </p>
 
 <p>
-Este amor que siento por ti no es pasajero, no es ligero, no es superficial. Es un amor que se queda, que resiste, que espera. Un amor que no se desespera por la distancia, sino que la enfrenta con paciencia y esperanza. Porque sé que todo esto vale la pena, porque sé que tú vales cada segundo de espera.
+Este amor que siento por ti no es pasajero, no es ligero, no es superficial. Es un amor que se queda, que resiste, que espera. Un amor que aprende a ser paciente sin dejar de ser intenso.
 </p>
 
 <p>
-Si supieras cuánto deseo abrazarte ahora mismo… No un abrazo rápido, no uno de cortesía. Hablo de ese abrazo largo, profundo, en el que el tiempo se rinde. Ese abrazo donde mi pecho encuentra el tuyo y el mundo deja de importar. Ese abrazo donde no hace falta decir “te extrañé”, porque el cuerpo lo grita solo.
+Porque sé que todo esto vale la pena. Porque sé que tú vales cada segundo de espera. Porque sé que cuando vuelva a abrazarte, cada día lejos habrá tenido sentido.
 </p>
 
 <p>
-Esta noche, mientras suena esta canción, quiero que sepas que mi amor viaja hacia ti. Que cruza cualquier distancia, cualquier obstáculo, cualquier silencio. Que llega a ti como un susurro, como una caricia invisible, como un abrazo que no se ve pero se siente.
+Sueño con el momento en que vuelva a tenerte frente a mí. Con ese instante exacto en el que te vea llegar y el corazón se me acelere como la primera vez. Sueño con caminar hacia ti sin decir nada, con abrazarte fuerte, con no soltarte durante un largo rato.
+</p>
+
+<p>
+Sueño con volver a besarte sin prisa, con recuperar cada beso que la distancia nos debe. Sueño con tus manos, con tu risa cerca, con tu voz hablándome al oído como si nunca nos hubiéramos separado.
+</p>
+
+<p>
+Si supieras cuánto deseo abrazarte ahora mismo… No un abrazo rápido, no uno de cortesía. Hablo de ese abrazo largo, profundo, en el que el tiempo se rinde. Ese abrazo donde mi pecho encuentra el tuyo y el mundo deja de importar.
+</p>
+
+<p>
+Ese abrazo donde no hace falta decir “te extrañé”, porque el cuerpo lo grita solo. Donde todo lo que no pudimos vivir en la distancia se concentra en un solo instante.
+</p>
+
+<p>
+Quisiera tomar tus manos, mirarte a los ojos y decirte que te sigo eligiendo. Que incluso en la ausencia, incluso en la espera, incluso en los días difíciles, sigues siendo tú.
+</p>
+
+<p>
+La distancia no ha hecho más que confirmarme algo: que te amo de una manera real. Que no necesito tenerte todos los días frente a mí para saber que eres la persona que quiero en mi vida.
+</p>
+
+<p>
+Que incluso lejos, sigues siendo mi lugar seguro, mi pensamiento constante, mi promesa silenciosa.
+</p>
+
+<p>
+Esta noche, mientras suena esta canción, quiero que sepas que mi amor viaja hacia ti. Que cruza cualquier distancia, cualquier obstáculo, cualquier silencio.
+</p>
+
+<p>
+Que llega a ti como un susurro, como una caricia invisible, como un abrazo que no se ve pero se siente.
+</p>
+
+<p>
+Prometo guardarte cada beso que no puedo darte ahora. Prometo guardarte cada abrazo pendiente. Prometo que cuando por fin estemos juntos, todo este amor acumulado explotará en gestos, en miradas, en besos interminables.
+</p>
+
+<p>
+Hasta ese momento, aquí estaré. Amándote. Pensándote. Esperándote.
+</p>
+
+<p>
+Con un amor que no se rinde, que no se cansa, que no se apaga.
+</p>
+
+<p>
+Con un amor que es tuyo, hoy y siempre.
 </p>
 
 <div class="firma">
 Con todo mi amor,<br>
-Juan
+<strong>Juan Kaleth Mendoza Primera</strong>
 </div>
 
 </div>
 
 <div class="botones">
-    <button onclick="playMusic()">Iniciar música</button>
-    <button onclick="pauseMusic()">Pausar</button>
-    <button onclick="playMusic()">Continuar</button>
+<button onclick="playMusic()">Iniciar música</button>
+<button onclick="pauseMusic()">Pausar</button>
+<button onclick="playMusic()">Continuar</button>
 </div>
 
 </div>
@@ -137,31 +188,25 @@ Juan
 
 <script>
 let player;
+let ready=false;
 
-function onYouTubeIframeAPIReady() {
-    player = new YT.Player('player', {
-        height: '0',
-        width: '0',
-        videoId: 'bk3S6vaMi6g',
-        playerVars: {
-            autoplay: 0,
-            controls: 0
-        }
+function onYouTubeIframeAPIReady(){
+    player=new YT.Player('player',{
+        height:'0',
+        width:'0',
+        videoId:'bk3S6vaMi6g',
+        playerVars:{autoplay:0,controls:0},
+        events:{onReady:()=>{ready=true;}}
     });
 }
 
-function playMusic(){
-    if(player) player.playVideo();
-}
+function playMusic(){ if(ready) player.playVideo(); }
+function pauseMusic(){ if(ready) player.pauseVideo(); }
 
-function pauseMusic(){
-    if(player) player.pauseVideo();
-}
-
-var tag = document.createElement('script');
-tag.src = "https://www.youtube.com/iframe_api";
+let tag=document.createElement('script');
+tag.src="https://www.youtube.com/iframe_api";
 document.body.appendChild(tag);
 </script>
 
 </body>
-    </html>
+</html>
