--- a/index.html
+++ b/index.html
@@ -2,47 +2,47 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Esta noche, para ti</title>
+<title>Para ti, esta noche</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;1,400&family=Italiana&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,500;1,600&family=Cinzel:400,600&display=swap" rel="stylesheet">
 
 <style>
 body{
     margin:0;
-    background:linear-gradient(180deg,#0a0014,#140021);
-    color:#f6ecff;
-    font-family:'Libre Baskerville', serif;
+    background:linear-gradient(180deg,#0b0016,#18002a);
+    color:#f7efff;
+    font-family:'Playfair Display', serif;
 }
 
-.wrapper{
+.contenedor{
     max-width:900px;
     margin:auto;
     padding:90px 35px;
 }
 
 .fecha{
-    font-family:'Italiana', serif;
-    font-size:52px;
-    color:#cda6ff;
+    font-family:'Cinzel', serif;
+    font-size:48px;
+    color:#d1a9ff;
     margin-bottom:70px;
 }
 
 .carta{
-    border-left:3px solid #8f5bd9;
+    border-left:3px solid #9b6be8;
     padding-left:45px;
 }
 
 .carta p{
-    font-size:21px;
-    line-height:2.15;
-    margin-bottom:34px;
+    font-size:22px;
+    line-height:2.35;
+    margin-bottom:42px;
     text-align:justify;
 }
 
 .firma{
-    margin-top:120px;
-    font-size:22px;
-    color:#e2caff;
+    margin-top:160px;
+    font-size:23px;
+    color:#ead9ff;
 }
 
 .botones{
@@ -52,26 +52,59 @@ body{
 
 .botones button{
     background:none;
-    border:2px solid #b88cff;
-    color:#f6ecff;
+    border:2px solid #c39bff;
+    color:#f7efff;
     padding:14px 36px;
     font-size:17px;
     border-radius:50px;
     margin:10px;
     cursor:pointer;
-    transition:all .35s ease;
 }
 
 .botones button:hover{
-    background:#b88cff;
-    color:#160022;
+    background:#c39bff;
+    color:#1a002c;
+}
+
+.final-btn{
+    margin-top:170px;
+    text-align:center;
+}
+
+.final-btn button{
+    background:#c39bff;
+    color:#1a002c;
+    border:none;
+    padding:16px 46px;
+    font-size:18px;
+    border-radius:60px;
+    cursor:pointer;
+}
+
+#pantallaFinal{
+    position:fixed;
+    inset:0;
+    background:black;
+    display:none;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    padding:40px;
+}
+
+#pantallaFinal p{
+    color:#f6ecff;
+    font-size:32px;
+    font-style:italic;
+    max-width:900px;
+    line-height:1.9;
 }
 </style>
 </head>
 
 <body>
 
-<div class="wrapper">
+<div class="contenedor">
 
 <div class="fecha">
 Sábado 10 de enero de 2026, por la noche
@@ -81,96 +114,41 @@ Sábado 10 de enero de 2026, por la noche
 
 <p>Amor mío,</p>
 
-<p>
-Esta noche no es una noche cualquiera. Es una de esas noches en las que el corazón se siente más despierto que nunca, en las que el silencio habla y dice tu nombre una y otra vez. Afuera el mundo sigue, el tiempo avanza, pero aquí dentro todo se detiene porque te pienso, porque te extraño, porque mi amor por ti no sabe quedarse callado.
-</p>
+<p>Esta noche no es una noche cualquiera. Es una de esas noches en las que el corazón se siente más despierto que nunca, en las que el silencio habla y dice tu nombre una y otra vez. Afuera el mundo sigue, el tiempo avanza, pero aquí dentro todo se detiene porque te pienso, porque te extraño, porque mi amor por ti no sabe quedarse callado.</p>
 
-<p>
-Mientras esta canción suena, siento que cada verso entiende exactamente lo que llevo dentro. La distancia… esa palabra que no debería existir cuando dos almas se aman así. Esa distancia que intenta separarnos, pero que no puede tocar lo que sentimos, porque lo nuestro vive más profundo, más adentro, donde nada ni nadie puede alcanzarlo.
-</p>
+<p>Mientras esta canción suena, siento que cada verso entiende exactamente lo que llevo dentro. La distancia… esa palabra que no debería existir cuando dos almas se aman así. Esa distancia que intenta separarnos, pero que no puede tocar lo que sentimos, porque lo nuestro vive más profundo, más adentro, donde nada ni nadie puede alcanzarlo.</p>
 
-<p>
-Te extraño de una forma que no sabía que era posible. No es solo extrañar tu presencia, es extrañar tu calor, tu olor, la manera en que tu cuerpo encaja con el mío como si hubiera sido creado para hacerlo. Extraño abrazarte y sentir cómo todo se acomoda, cómo mis preocupaciones se apagan cuando estás entre mis brazos. Extraño la paz que me das sin darte cuenta.
-</p>
+<p>Te extraño de una forma que no sabía que era posible. No es solo extrañar tu presencia, es extrañar tu calor, tu olor, la manera en que tu cuerpo encaja con el mío como si hubiera sido creado para hacerlo. Extraño abrazarte y sentir cómo todo se acomoda, cómo mis preocupaciones se apagan cuando estás entre mis brazos. Extraño la paz que me das sin darte cuenta.</p>
 
-<p>
-Extraño besarte… y no de cualquier manera. Extraño esos besos que empiezan suaves y terminan siendo promesas. Esos besos que no necesitan palabras, porque lo dicen todo. Extraño besarte lento, besarte con ganas, besarte como si el mundo no existiera. Extraño perderme en tus labios y recordar que ahí es donde pertenezco.
-</p>
+<p>Extraño besarte… y no de cualquier manera. Extraño esos besos que empiezan suaves y terminan siendo promesas. Esos besos que no necesitan palabras, porque lo dicen todo. Extraño besarte lento, besarte con ganas, besarte como si el mundo no existiera. Extraño perderme en tus labios y recordar que ahí es donde pertenezco.</p>
 
-<p>
-Hay noches como esta en las que cierro los ojos y te imagino conmigo. Te imagino frente a mí, mirándome como solo tú sabes hacerlo, con esa mezcla perfecta de ternura y profundidad. Te imagino acercándote despacio, dejando que el silencio haga su parte antes del beso.
-</p>
+<p>Hay noches como esta en las que cierro los ojos y te imagino conmigo. Te imagino sentada frente a mí, mirándome como solo tú sabes hacerlo, con esa mezcla perfecta de ternura y profundidad. Te imagino sonriendo, acercándote poco a poco, dejando que el silencio haga su parte antes del beso. Y aunque sé que es solo mi imaginación, mi corazón reacciona como si fuera real, porque el amor no entiende de distancias.</p>
 
-<p>
-Y aunque sé que es solo mi imaginación, mi corazón reacciona como si fuera real. Porque el amor no entiende de distancias, entiende de certezas. Y tú eres mi certeza.
-</p>
+<p>Pensarte se ha vuelto un hábito, pero no uno cualquiera, sino uno sagrado. Te pienso cuando despierto y cuando me acuesto. Te pienso en los momentos felices y también cuando el cansancio pesa. Te pienso incluso cuando no quiero pensar en nada, porque apareces sola, sin ser llamada, como si mi mente supiera que tú eres hogar.</p>
 
-<p>
-Pensarte se ha vuelto un hábito, pero no uno cualquiera, sino uno sagrado. Te pienso cuando despierto y cuando me acuesto. Te pienso en los momentos felices y también cuando el cansancio pesa. Te pienso incluso cuando no quiero pensar en nada, porque apareces sola, sin ser llamada, como si mi mente supiera que tú eres hogar.
-</p>
+<p>Este amor que siento por ti no es pasajero, no es ligero, no es superficial. Es un amor que se queda, que resiste, que espera. Un amor que no se desespera por la distancia, sino que la enfrenta con paciencia y esperanza. Porque sé que todo esto vale la pena, porque sé que tú vales cada segundo de espera.</p>
 
-<p>
-Este amor que siento por ti no es pasajero, no es ligero, no es superficial. Es un amor que se queda, que resiste, que espera. Un amor que aprende a ser paciente sin dejar de ser intenso.
-</p>
+<p>Si supieras cuánto deseo abrazarte ahora mismo… No un abrazo rápido, no uno de cortesía. Hablo de ese abrazo largo, profundo, en el que el tiempo se rinde. Ese abrazo donde mi pecho encuentra el tuyo y el mundo deja de importar. Ese abrazo donde no hace falta decir “te extrañé”, porque el cuerpo lo grita solo.</p>
 
-<p>
-Porque sé que todo esto vale la pena. Porque sé que tú vales cada segundo de espera. Porque sé que cuando vuelva a abrazarte, cada día lejos habrá tenido sentido.
-</p>
+<p>Quisiera tomar tus manos esta noche, mirarte a los ojos y decirte todo esto sin escribirlo. Quisiera que sintieras el latido acelerado de mi corazón cuando estás cerca. Quisiera que supieras que cada latido pronuncia tu nombre en silencio. Pero como no puedo, te dejo estas palabras, cargadas de amor, de deseo, de verdad.</p>
 
-<p>
-Sueño con el momento en que vuelva a tenerte frente a mí. Con ese instante exacto en el que te vea llegar y el corazón se me acelere como la primera vez. Sueño con caminar hacia ti sin decir nada, con abrazarte fuerte, con no soltarte durante un largo rato.
-</p>
+<p>La distancia no ha hecho más que confirmarme algo: que te amo de una manera real. Que no necesito tenerte todos los días frente a mí para saber que eres la persona que quiero en mi vida. Que incluso lejos, sigues siendo mi lugar seguro, mi pensamiento constante, mi elección diaria.</p>
 
-<p>
-Sueño con volver a besarte sin prisa, con recuperar cada beso que la distancia nos debe. Sueño con tus manos, con tu risa cerca, con tu voz hablándome al oído como si nunca nos hubiéramos separado.
-</p>
+<p>Hay algo muy poderoso en amarte así. En desearte sin poseerte. En cuidarte incluso desde lejos. En imaginar futuros mientras el presente espera. Y aun así, no negaré que duele. Duele no poder besarte cuando te extraño. Duele no poder abrazarte cuando el día pesa. Pero ese dolor no es vacío, es un dolor lleno de amor, lleno de ti.</p>
 
-<p>
-Si supieras cuánto deseo abrazarte ahora mismo… No un abrazo rápido, no uno de cortesía. Hablo de ese abrazo largo, profundo, en el que el tiempo se rinde. Ese abrazo donde mi pecho encuentra el tuyo y el mundo deja de importar.
-</p>
+<p>Esta noche, mientras suena esta canción, quiero que sepas que mi amor viaja hacia ti. Que cruza cualquier distancia, cualquier obstáculo, cualquier silencio. Que llega a ti como un susurro, como una caricia invisible, como un abrazo que no se ve pero se siente.</p>
 
-<p>
-Ese abrazo donde no hace falta decir “te extrañé”, porque el cuerpo lo grita solo. Donde todo lo que no pudimos vivir en la distancia se concentra en un solo instante.
-</p>
+<p>Prometo guardarte cada beso que no puedo darte ahora. Prometo guardarte cada abrazo pendiente. Prometo que cuando por fin estemos juntos, todo este amor acumulado explotará en gestos, en miradas, en besos interminables.</p>
 
-<p>
-Quisiera tomar tus manos, mirarte a los ojos y decirte que te sigo eligiendo. Que incluso en la ausencia, incluso en la espera, incluso en los días difíciles, sigues siendo tú.
-</p>
+<p>Hasta ese momento, aquí estaré. Amándote. Pensándote. Esperándote.</p>
 
-<p>
-La distancia no ha hecho más que confirmarme algo: que te amo de una manera real. Que no necesito tenerte todos los días frente a mí para saber que eres la persona que quiero en mi vida.
-</p>
-
-<p>
-Que incluso lejos, sigues siendo mi lugar seguro, mi pensamiento constante, mi promesa silenciosa.
-</p>
-
-<p>
-Esta noche, mientras suena esta canción, quiero que sepas que mi amor viaja hacia ti. Que cruza cualquier distancia, cualquier obstáculo, cualquier silencio.
-</p>
-
-<p>
-Que llega a ti como un susurro, como una caricia invisible, como un abrazo que no se ve pero se siente.
-</p>
-
-<p>
-Prometo guardarte cada beso que no puedo darte ahora. Prometo guardarte cada abrazo pendiente. Prometo que cuando por fin estemos juntos, todo este amor acumulado explotará en gestos, en miradas, en besos interminables.
-</p>
-
-<p>
-Hasta ese momento, aquí estaré. Amándote. Pensándote. Esperándote.
-</p>
-
-<p>
-Con un amor que no se rinde, que no se cansa, que no se apaga.
-</p>
-
-<p>
-Con un amor que es tuyo, hoy y siempre.
-</p>
+<p>Con un amor paciente, apasionado y verdadero.<br>
+Con el corazón abierto y los brazos listos para cuando regreses a ellos.<br>
+Te amo más de lo que estas palabras pueden contener.<br>
+Te amo incluso en la distancia.<br>
+Te amo esta noche… y todas las que vendrán. 💜</p>
 
 <div class="firma">
-Con todo mi amor,<br>
 <strong>Juan Kaleth Mendoza Primera</strong>
 </div>
 
@@ -182,31 +160,47 @@ Con todo mi amor,<br>
 <button onclick="playMusic()">Continuar</button>
 </div>
 
+<div class="final-btn">
+<button onclick="mostrarFinal()">Un último detalle…</button>
 </div>
 
-<div id="player"></div>
+</div>
+
+<div id="pantallaFinal">
+<p>
+Mon amour Valeria Isabel Petro Villazón,<br><br>
+Même dans la distance et le silence,<br>
+mon cœur te choisira toujours,<br>
+car t’aimer est ma vérité.
+</p>
+</div>
+
+<iframe id="musicFrame"
+src="https://www.youtube.com/embed/bk3S6vaMi6g?enablejsapi=1"
+allow="autoplay"
+style="display:none;"></iframe>
 
 <script>
-let player;
-let ready=false;
+let frame = document.getElementById("musicFrame");
 
-function onYouTubeIframeAPIReady(){
-    player=new YT.Player('player',{
-        height:'0',
-        width:'0',
-        videoId:'bk3S6vaMi6g',
-        playerVars:{autoplay:0,controls:0},
-        events:{onReady:()=>{ready=true;}}
-    });
+function playMusic(){
+    frame.contentWindow.postMessage(
+        '{"event":"command","func":"playVideo","args":""}',
+        '*'
+    );
 }
 
-function playMusic(){ if(ready) player.playVideo(); }
-function pauseMusic(){ if(ready) player.pauseVideo(); }
+function pauseMusic(){
+    frame.contentWindow.postMessage(
+        '{"event":"command","func":"pauseVideo","args":""}',
+        '*'
+    );
+}
 
-let tag=document.createElement('script');
-tag.src="https://www.youtube.com/iframe_api";
-document.body.appendChild(tag);
+function mostrarFinal(){
+    document.getElementById("pantallaFinal").style.display="flex";
+}
 </script>
 
 </body>
-</html>
+    </html>
