--- a/index.html
+++ b/index.html
@@ -168,9 +168,10 @@ allowfullscreen></iframe>
 <div id="pantallaFinal">
 <p>
 Mon amour Valeria Isabel Petro Villazón,<br><br>
-Même dans la distance et le silence,<br>
-je te choisis chaque jour,<br>
-car t’aimer est ma plus belle vérité.
+même lorsque le monde nous sépare,<br>
+mon cœur trouve toujours le chemin vers toi.<br>
+Tu es ma douceur, mon refuge,<br>
+et t’aimer est la plus belle promesse de ma vie.
 </p>
 </div>
 
